src/objects/JIRA_Feature__c.object
<CustomObject>
    <fields>
        <fullName>JIRAID__c</fullName>
        <externalId>true</externalId>
        <label>JIRAID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JIRA_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JIRA_Issue_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JIRA_Project__c</fullName>
        <label>JIRA Project</label>
        <referenceTo>JIRA_Project__c</referenceTo>
        <relationshipLabel>JIRA Features</relationshipLabel>
        <relationshipName>JIRA_Features</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JIRA_Resolution__c</fullName>
        <label>Resolution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JIRA_Target_Stable_Realease__c</fullName>
        <label>Target Stable Release</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>JIRA Feature</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>JIRA Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JIRA Features</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>